--- a/app/src/main/res/layout/app_bar_inicio.xml
+++ b/app/src/main/res/layout/app_bar_inicio.xml
@@ -16,8 +16,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:background="#3ec242"
+            android:backgroundTint="#3ec242" />
 
     </android.support.design.widget.AppBarLayout>
 
