--- a/app/src/main/res/layout/fragment_aplicaciones.xml
+++ b/app/src/main/res/layout/fragment_aplicaciones.xml
@@ -5,14 +5,15 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/iconoApp" />
+        android:layout_height="150px"
+        android:id="@+id/iconoApp"
+        android:layout_gravity="center_vertical|fill_horizontal"
+        android:layout_width="150px" />
 
     <TextView
         android:id="@+id/nombre"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="83px"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
