--- a/app/src/main/res/layout/fragment_aplicaciones.xml
+++ b/app/src/main/res/layout/fragment_aplicaciones.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/nombre"
         android:layout_width="wrap_content"
-        android:layout_height="83px"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
